fix: fixed the issue where the channel video list was not showing

--- a/packages/background/public/stop-main-list.css
+++ b/packages/background/public/stop-main-list.css
@@ -1,3 +1,3 @@
-ytd-rich-grid-renderer:has(#dismissible.style-scope.ytd-rich-grid-media):not(:has(#subscribe-button.style-scope.ytd-shelf-renderer)) {
+ytd-rich-grid-renderer:has(#dismissible.style-scope.ytd-rich-grid-media):not(:has(#subscribe-button.style-scope.ytd-shelf-renderer)):not(:has(yt-formatted-string[title="Latest"])) {
   display: none !important;
 }
